# nurse_patient_assignment

./: Procfile  README.md  SECURITY.md  nurse_patient_assignment_SBOM.json  pyproject.toml  requirements.txt
.github/workflows/: build-and-attest.yml  codeql.yml
data/: history.json  nurses.json  patients.json
interface/: cli.py  web.py
scheduler/: __init__.py  generate_version.py  scheduler.py  solver.py  utils.py
static/: index.html  style.css
templates/: index.html
tests/: README_heroku.txt  readme_tests.txt  test_utils.py  test_web.py
